--- a/package.json
+++ b/package.json
@@ -3,32 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.10",
-    "apollo-client": "^2.2.6",
     "apollo-engine": "^1.0.1",
-    "apollo-link": "^1.2.1",
-    "apollo-link-context": "^1.0.7",
-    "apollo-link-error": "^1.0.7",
-    "apollo-link-http": "^1.5.3",
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "dataloader": "^1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "frappe-charts": "^1.0.0",
     "fuse.js": "^3.2.0",
     "graphql": "0.13.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-playground-middleware-express": "^1.5.7",
-    "graphql-tag": "^2.8.0",
-    "graphql-tools": "^2.21.0",
-    "localforage": "^1.6.0",
-    "lodash.debounce": "^4.0.8",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "reason-apollo": "^0.6.18",
-    "reason-scripts": "0.8.0",
-    "reshaper": "^0.3.1"
+    "graphql-tools": "^2.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,22 +23,22 @@
     "eject": "react-scripts eject",
     "prepare": "npm link bs-platform",
     "precommit": "lint-staged",
-    "knex": "knex --knexfile ./server/knexfile.js"
+    "knex": "node_modules/.bin/knex --knexfile ./server/knexfile.js"
   },
   "devDependencies": {
-    "bs-jest": "^0.3.2",
-    "graphql_ppx": "^0.2.1",
-    "husky": "^0.14.3",
     "knex": "^0.14.4",
     "lint-staged": "^7.0.0",
-    "node-fetch": "^2.1.1",
-    "prettier": "1.11.1",
-    "reason-react": "^0.3.2",
-    "sqlite3": "^4.0.0"
+    "node-fetch": "^2.1.1"
   },
   "lint-staged": {
-    "*.{re,rei,ml,mli}": ["refmt --in-place", "git add"],
-    "*.{js,json,css,md}": ["prettier --write", "git add"]
+    "*.{re,rei,ml,mli}": [
+      "refmt --in-place",
+      "git add"
+    ],
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "proxy": "http://localhost:3001"
 }
