--- a/package.json
+++ b/package.json
@@ -3,28 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-engine": "^1.0.1",
-    "apollo-server-express": "^1.3.2",
-    "body-parser": "^1.18.2",
-    "dataloader": "^1.4.0",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.2",
-    "fuse.js": "^3.2.0",
-    "graphql": "0.13.0",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-playground-middleware-express": "^1.5.7",
-    "graphql-tools": "^2.21.0"
+    "apollo-cache-control": "^0.11.2",
+    "apollo-datasource-rest": "^0.9.4",
+    "apollo-engine": "^1.1.2",
+    "apollo-server": "^2.18.0",
+    "body-parser": "^1.19.0",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fuse.js": "^6.4.1",
+    "graphql": "^15.3.0",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-playground-middleware-express": "^1.7.21",
+    "graphql-tools": "^6.2.3",
+    "sqlite3": "^5.0.0"
   },
   "scripts": {
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
+    "lint": "eslint src/ --fix",
     "start": "node server",
-    "prepare": "npm link bs-platform",
     "precommit": "lint-staged",
-    "knex": "node_modules/.bin/knex --knexfile ./server/knexfile.js"
+    "knex": "knex",
+    "test": "jest"
   },
+  "main": "src/index.js",
   "devDependencies": {
-    "knex": "^0.14.4",
-    "lint-staged": "^7.0.0",
-    "node-fetch": "^2.1.1"
+    "jest": "^26.4.2",
+    "knex": "^0.21.5",
+    "lint-staged": "^10.4.0",
+    "node-fetch": "^2.6.1"
   },
   "lint-staged": {
     "*.{re,rei,ml,mli}": [
